# slicer

./: CMakeLists.txt  main.cpp
